[package]
name = "gbr"
version = "0.1.1"
authors = ["Keichi Takahashi <keichi.t@me.com>"]
description = "Yet another Game Boy emulator in Rust."
repository = "https://github.com/keichi/gbr"
readme = "README.md"
keywords = ["gameboy", "dmg", "emulator"]
categories = ["emulators"]
license = "MIT"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
log = "0.4"
env_logger = "0.6"
sdl2 = "0.32.1"

[badges]
circle-ci = { repository = "keichi/gbr", branch = "master" }
